<resources>
    <string name="app_name">AvoidIt</string>
    <string name="drawer_open" translatable="false">drawer_open</string>
    <string name="drawer_close" translatable="false">drawer_close</string>
    <string name="btn_view_routes">View Your Routes</string>
    <string name="btn_view_route">View Route</string>
    <string name="btn_add_route">Add Route</string>
    <string name="btn_view_obstructions">View Obstructions</string>
    <string name="menu_language">Language</string>
    <string name="menu_dark_mode">Dark Mode</string>
    <string name="menu_metric">Metric (km / mi)</string>
    <string name="menu_notification">Notification Settings</string>
    <string name="menu_about">About the App</string>
    <string name="txt_view_location">View Location</string>

    <string name="edt_route_name">Route Name</string>
    <string name="edt_start_location">Start Location</string>
    <string name="edt_end_location">End Location</string>

    <string name="edt_time">Time</string>
    <string name="route_view_status">Current Status: On Fire</string>
    <string name="route_view_notifications">Notifications Enabled</string>
    <string name="route_view_time_to_send">Time to Send Notification</string>
    <string name="btn_save_changes">Save Changes</string>
    <string name="btn_delete_route">Delete Route</string>
    <string name="btn_edit_time">Set Time</string>
    <string name="btn_s" translatable="false">S</string>
    <string name="btn_m" translatable="false">M</string>
    <string name="btn_t" translatable="false">T</string>
    <string name="btn_w" translatable="false">W</string>
    <string name="btn_f" translatable="false">F</string>
    <string name="notification_push_setting_enable">Enabled Push Notifications</string>
    <string name="notification_push_setting_disable">Disabled Push Notifications</string>

    <string name="txt_route_name">Route Name</string>
    <string name="txt_from">FROM</string>
    <string name="txt_start">(start)</string>
    <string name="txt_to">TO</string>
    <string name="txt_end">(end)</string>
    <string name="txt_status">Status: </string>
    <string name="txt_set_status">Clear</string>

    <string name="txt_obstruction_project_name">Obstruction Project Name</string>

    <string name="txt_error">Error!</string>
    <string name="title_activity_view_maps_obstruction">Map</string>
    <string name="title_activity_view_routes_map">Map</string>
</resources>
