<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_language"
        android:icon="@mipmap/ic_launcher_round"
        android:title="@string/menu_language"
        />

    <item
        android:id="@+id/menu_dark_mode"
        android:icon="@mipmap/ic_launcher_round"
        android:title="@string/menu_dark_mode"
        />

    <item
        android:id="@+id/menu_metric"
        android:icon="@mipmap/ic_launcher_round"
        android:title="@string/menu_metric"
        />

    <item
        android:id="@+id/menu_notification"
        android:icon="@mipmap/ic_launcher_round"
        android:title="@string/menu_notification"
        />

    <item
        android:id="@+id/menu_about"
        android:icon="@mipmap/ic_launcher_round"
        android:title="@string/menu_about"
        />

</menu>